# ai-a2a

./: README.md  main.py  pyproject.toml
01.pre/: docker-compose-infra.yaml
01.pre/agents/embed-agent/: Dockerfile  agent.py  entrypoint.sh  requirements.txt
01.pre/config/grafana/: dashboard.json  datasources.yml  eagent.json
01.pre/config/litellm/: config.yml
01.pre/config/postgres/: 01-init.sql  02-agent-metrics-views.sql
01.pre/config/prometheus/: prometheus.yml
01.pre/config/solace-init/: init-config.json  init.py
01.pre/docs/: customer_transaction.csv
01.pre/scripts/: generate_traffic.ps1  import_customer_transactions.py  query_customer_transactions.py  query_kb.py  sample_questions.txt  upload_file.py
01.pre/volumes/sam/app/: mermaid-agent.db  orchestrator-agent.db  platform.db  requirements.txt  webui-gateway.db
01.pre/volumes/sam/app/configs/: shared_config.yaml
01.pre/volumes/sam/app/configs/agents/: main_orchestrator.yaml
01.pre/volumes/sam/app/configs/gateways/: webui.yaml
02.agents/: Dockerfile  docker-compose-agents.yaml  requirements.txt  test_a2a_v2.py  ui_server.py
02.agents/a2a/: client.py  protocol.py
02.agents/agents/: base.py  db_agent.py  kb_agent.py  llm_agent.py  orchestrator.py
02.agents/src/db/: db_tools.py
02.agents/src/kb/: kb_tools.py
02.agents/ui/: index.html
